--- a/index.html
+++ b/index.html
@@ -1,100 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <title>Markdown Viewer</title>
+  <title>SQL Notes | Quick Reference</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Google Fonts for clean look -->
+  <link href="https://fonts.googleapis.com/css?family=Inter:400,600&display=swap" rel="stylesheet">
+  <!-- Font Awesome for icons (optional) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Highlight.js for code syntax -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'Inter', Arial, sans-serif;
+      background: #f9f9fb;
+      color: #222;
     }
-
+    .header {
+      background: #3366cc;
+      color: #fff;
+      padding: 20px 0;
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 600;
+      letter-spacing: 1px;
+      box-shadow: 0 2px 4px #e0e0e0;
+    }
     .container {
       display: flex;
-      height: 100vh;
-    }
-
-    .sidebar {
-      width: 250px;
-      background: #f4f4f4;
-      border-right: 1px solid #ccc;
-      overflow-y: auto;
-      padding: 20px;
-    }
-
-    .preview {
-      flex: 1;
-      padding: 20px;
-      overflow-y: auto;
+      min-height: 80vh;
+      max-width: 1100px;
+      margin: 30px auto 0 auto;
       background: #fff;
+      border-radius: 18px;
+      box-shadow: 0 4px 16px #e0e0e0;
+      overflow: hidden;
     }
-
+    .sidebar {
+      width: 270px;
+      background: #f4f6fa;
+      border-right: 1px solid #dedede;
+      overflow-y: auto;
+      padding: 28px 18px;
+    }
+    .sidebar h2 {
+      font-size: 1.1rem;
+      font-weight: 600;
+      margin-bottom: 24px;
+      color: #3366cc;
+      letter-spacing: 0.5px;
+    }
     .sidebar a {
       display: block;
       margin-bottom: 10px;
       color: #3366cc;
       text-decoration: none;
-      font-weight: bold;
-      cursor: pointer;
+      font-weight: 500;
+      font-size: 1rem;
+      padding: 8px 12px;
+      border-radius: 6px;
+      transition: background 0.18s, color 0.18s;
     }
-
+    .sidebar a:hover,
     .sidebar a.active {
-      color: #222;
+      background: #e0eaff;
+      color: #23408e;
+      font-weight: 600;
     }
-
-    /* Improved code block styling */
-    pre,
-    code {
-      background: #272822;
-      color: #f8f8f2;
-      border-radius: 4px;
+    .preview {
+      flex: 1;
+      padding: 38px 32px;
+      overflow-y: auto;
+      background: #fff;
+      border-radius: 0 18px 18px 0;
+      min-height: 400px;
+      box-sizing: border-box;
+    }
+    .preview h1, .preview h2, .preview h3 {
+      color: #3366cc;
+      margin-top: 1.2em;
+    }
+    /* Code blocks */
+    pre, code {
       font-family: 'Fira Mono', 'Consolas', 'Monaco', monospace;
       font-size: 15px;
+      border-radius: 6px;
     }
-
     pre {
       padding: 16px;
       margin: 1em 0;
       overflow-x: auto;
-      white-space: pre;
-      box-sizing: border-box;
-      width: 100%;
-      max-width: 100%;
+      background: #282c34;
+      color: #f8f8f2;
+      box-shadow: 0 2px 8px #eee;
     }
-
     code {
-      padding: 2px 4px;
-      white-space: pre-wrap;
-      background: #f5f2f0;
+      padding: 2px 6px;
+      background: #ececec;
       color: #c7254e;
-      border-radius: 4px;
       font-size: 14px;
+      border-radius: 4px;
     }
-
     pre code {
       background: none;
       color: inherit;
       padding: 0;
       font-size: inherit;
     }
+    /* Responsive design */
+    @media (max-width: 700px) {
+      .container {
+        flex-direction: column;
+        border-radius: 0;
+        box-shadow: none;
+      }
+      .sidebar {
+        width: 100%;
+        border-right: none;
+        border-bottom: 1px solid #dedede;
+        padding: 20px 10px;
+      }
+      .preview {
+        padding: 22px 10px;
+        border-radius: 0;
+      }
+    }
+    footer {
+      text-align: center;
+      padding: 16px;
+      background: #ececec;
+      color: #666;
+      font-size: 15px;
+      letter-spacing: 0.5px;
+      margin-top: 32px;
+      border-radius: 0 0 18px 18px;
+      max-width: 1100px;
+      margin-left: auto;
+      margin-right: auto;
+    }
   </style>
 </head>
-
 <body>
+  <div class="header">
+    <i class="fa fa-database"></i> SQL Notes <span style="font-size:1.2rem;">| Quick Reference</span>
+  </div>
   <div class="container">
     <div class="sidebar" id="sidebar">
+      <h2><i class="fa fa-list-ul"></i> Topics</h2>
       <!-- Links will be injected here -->
     </div>
     <div class="preview" id="preview">
-      <em>Select a Markdown file from the left.</em>
+      <h2>Welcome! 👋</h2>
+      <p>
+        This is my personal SQL notes collection. I prefer concise written references over lengthy tutorial videos, so I created this site for quick lookup and practical SQL examples.
+      </p>
+      <ul>
+        <li>Browse topics from the sidebar</li>
+        <li>Each note is organized and easy to scan</li>
+        <li>Feel free to share or bookmark!</li>
+      </ul>
+      <p>
+        <strong>Happy querying! 🛠️</strong>
+      </p>
     </div>
   </div>
+  <footer>
+    Made by <a href="https://github.com/rttechdev" target="_blank" style="color:#3366cc;text-decoration:none;font-weight:600;">Roshan Tiwari</a> | <a href="https://github.com/rttechdev/sql-notes" target="_blank" style="color:#3366cc;text-decoration:none;">View on GitHub</a>
+  </footer>
+  <!-- Marked.js for markdown -->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <!-- Highlight.js for code blocks -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
   <script>
-    // List your markdown files here
+    // All your files
     const files = [
-
       "01_Select.md",
       "02_Select_Distinct.md",
       "03_Count.md",
@@ -142,30 +222,20 @@
 
     // Convert file name "23_Chosing_Data_Types.md" -> "23. Chosing Data Types"
     function getSidebarText(file) {
-      // Remove .md extension
       let name = file.replace(/\.md$/, '');
-
-      // Split into number and rest
       let match = name.match(/^(\d+)_([\s\S]+)$/);
       if (match) {
         let num = match[1];
         let rest = match[2];
-
-        // Replace underscores with spaces
         rest = rest.replace(/_/g, ' ');
-
-        // Replace & with "and"
         rest = rest.replace(/&/g, 'and');
-
         // Capitalize each word
-        rest = rest.replace(/\b\w+/g, function (word) {
+        rest = rest.replace(/\b\w+/g, function(word) {
           return word.charAt(0).toUpperCase() + word.slice(1);
         });
-
         return `${num}. ${rest}`;
       } else {
-        // Fallback: just remove .md and capitalize
-        return name.replace(/_/g, ' ').replace(/\b\w+/g, function (word) {
+        return name.replace(/_/g, ' ').replace(/\b\w+/g, function(word) {
           return word.charAt(0).toUpperCase() + word.slice(1);
         });
       }
@@ -175,9 +245,14 @@
       fetch(fileName)
         .then(resp => resp.text())
         .then(text => {
+          // Render markdown and highlight code
           preview.innerHTML = marked.parse(text);
           document.querySelectorAll('.sidebar a').forEach(a => a.classList.remove('active'));
           if (linkElem) linkElem.classList.add('active');
+          // Highlight all code blocks
+          preview.querySelectorAll('pre code').forEach(block => {
+            hljs.highlightElement(block);
+          });
         })
         .catch(() => {
           preview.innerHTML = `<b style="color:red;">Failed to load: ${fileName}</b>`;
@@ -197,5 +272,4 @@
     });
   </script>
 </body>
-
 </html>
