--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>SQL Notes | Quick Reference</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Google Fonts for clean look -->
-  <link href="https://fonts.googleapis.com/css?family=Inter:400,600&display=swap" rel="stylesheet">
-  <!-- Font Awesome for icons (optional) -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Inter:400,600&display=swap" rel="stylesheet" />
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <!-- Highlight.js for code syntax -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css" />
   <style>
     body {
       margin: 0;
-      font-family: 'Inter', Arial, sans-serif;
+      font-family: "Inter", Arial, sans-serif;
       background: #f9f9fb;
       color: #222;
     }
+
     .header {
       background: #3366cc;
       color: #fff;
@@ -26,7 +28,22 @@
       font-weight: 600;
       letter-spacing: 1px;
       box-shadow: 0 2px 4px #e0e0e0;
+      position: relative;
     }
+
+    .menu-toggle {
+      display: none;
+      position: absolute;
+      left: 0px;
+      top: 22px;
+      font-size: 2rem;
+      background: none;
+      border: none;
+      color: #fff;
+      cursor: pointer;
+      z-index: 10;
+    }
+
     .container {
       display: flex;
       min-height: 80vh;
@@ -37,13 +54,16 @@
       box-shadow: 0 4px 16px #e0e0e0;
       overflow: hidden;
     }
+
     .sidebar {
       width: 270px;
       background: #f4f6fa;
       border-right: 1px solid #dedede;
       overflow-y: auto;
-      padding: 28px 18px;
+      padding: 28px 0px 28px 18px;
+      transition: left 0.2s;
     }
+
     .sidebar h2 {
       font-size: 1.1rem;
       font-weight: 600;
@@ -51,6 +71,7 @@
       color: #3366cc;
       letter-spacing: 0.5px;
     }
+
     .sidebar a {
       display: block;
       margin-bottom: 10px;
@@ -61,32 +82,42 @@
       padding: 8px 12px;
       border-radius: 6px;
       transition: background 0.18s, color 0.18s;
+      cursor: pointer;
     }
+
     .sidebar a:hover,
     .sidebar a.active {
       background: #e0eaff;
       color: #23408e;
       font-weight: 600;
     }
+
     .preview {
       flex: 1;
-      padding: 38px 32px;
+      padding: 38px 32px 80px 32px;
       overflow-y: auto;
       background: #fff;
       border-radius: 0 18px 18px 0;
       min-height: 400px;
       box-sizing: border-box;
+      position: relative;
     }
-    .preview h1, .preview h2, .preview h3 {
+
+    .preview h1,
+    .preview h2,
+    .preview h3 {
       color: #3366cc;
       margin-top: 1.2em;
     }
+
     /* Code blocks */
-    pre, code {
-      font-family: 'Fira Mono', 'Consolas', 'Monaco', monospace;
+    pre,
+    code {
+      font-family: "Fira Mono", "Consolas", "Monaco", monospace;
       font-size: 15px;
       border-radius: 6px;
     }
+
     pre {
       padding: 16px;
       margin: 1em 0;
@@ -95,6 +126,7 @@
       color: #f8f8f2;
       box-shadow: 0 2px 8px #eee;
     }
+
     code {
       padding: 2px 6px;
       background: #ececec;
@@ -102,30 +134,92 @@
       font-size: 14px;
       border-radius: 4px;
     }
+
     pre code {
       background: none;
       color: inherit;
       padding: 0;
       font-size: inherit;
     }
+
+    /* Navigation buttons */
+    .nav-buttons {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 16px;
+      display: flex;
+      justify-content: center;
+      gap: 18px;
+      z-index: 2;
+      pointer-events: none;
+    }
+
+    .nav-buttons button {
+      pointer-events: all;
+      background: #3366cc;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      padding: 8px 18px;
+      font-size: 1.1rem;
+      cursor: pointer;
+      transition: background 0.2s;
+      font-weight: 600;
+      box-shadow: 0 1px 4px #ddd;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .nav-buttons button:active {
+      background: #23408e;
+    }
+
     /* Responsive design */
+    @media (max-width: 900px) {
+      .container {
+        max-width: 100vw;
+        margin: 0;
+      }
+    }
+
     @media (max-width: 700px) {
       .container {
         flex-direction: column;
         border-radius: 0;
         box-shadow: none;
       }
+
       .sidebar {
-        width: 100%;
-        border-right: none;
-        border-bottom: 1px solid #dedede;
-        padding: 20px 10px;
+        width: 270px;
+        position: fixed;
+        left: -280px;
+        top: 0;
+        bottom: 0;
+        height: 100vh;
+        z-index: 100;
+        background: #f4f6fa;
+        border-right: 1px solid #dedede;
+        box-shadow: 2px 0 12px #eee;
+        padding-top: 60px;
       }
+
+      .sidebar.open {
+        left: 0;
+      }
+
+      .menu-toggle {
+        display: block;
+      }
+
       .preview {
-        padding: 22px 10px;
+        padding: 22px 15px 80px 15px;
         border-radius: 0;
+        min-height: 300px;
       }
     }
+
     footer {
       text-align: center;
       padding: 16px;
@@ -139,11 +233,23 @@
       margin-left: auto;
       margin-right: auto;
     }
+
+    @media (max-width: 700px) {
+      footer {
+        border-radius: 0;
+        margin-top: 0;
+      }
+    }
   </style>
 </head>
+
 <body>
   <div class="header">
-    <i class="fa fa-database"></i> SQL Notes <span style="font-size:1.2rem;">| Quick Reference</span>
+    <button class="menu-toggle" id="menuToggle" aria-label="Show menu">
+      <i class="fa fa-bars"></i>
+    </button>
+    <i class="fa fa-database"></i> SQL Notes
+    <span style="font-size: 1.2rem">| Quick Reference</span>
   </div>
   <div class="container">
     <div class="sidebar" id="sidebar">
@@ -153,7 +259,12 @@
     <div class="preview" id="preview">
       <h2>Welcome! 👋</h2>
       <p>
-        This is my personal SQL notes collection. I prefer concise written references over lengthy tutorial videos, so I created this site for quick lookup and practical SQL examples.
+        This is my personal SQL notes collection. I prefer concise written
+        references over lengthy tutorial videos, so I created this site for
+        quick lookup and practical SQL examples.<br />
+        <b>On mobile, tap
+          <span style="background: #e0eaff; border-radius: 4px; padding: 2px 8px"><i class="fa fa-bars"></i></span>
+          to open the menu.</b>
       </p>
       <ul>
         <li>Browse topics from the sidebar</li>
@@ -163,17 +274,22 @@
       <p>
         <strong>Happy querying! 🛠️</strong>
       </p>
+      <div class="nav-buttons" id="navButtons" style="display: none"></div>
     </div>
   </div>
   <footer>
-    Made by <a href="https://github.com/rttechdev" target="_blank" style="color:#3366cc;text-decoration:none;font-weight:600;">Roshan Tiwari</a> | <a href="https://github.com/rttechdev/sql-notes" target="_blank" style="color:#3366cc;text-decoration:none;">View on GitHub</a>
+    Made with <span style="color: #e25555">&#10084;</span> by
+    <a href="https://github.com/rttechdev" target="_blank"
+      style="color: #3366cc; text-decoration: none; font-weight: 600">rttechdev</a>
+    |
+    <a href="https://github.com/rttechdev/sql-notes" target="_blank" style="color: #3366cc; text-decoration: none">View
+      on GitHub</a>
   </footer>
   <!-- Marked.js for markdown -->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <!-- Highlight.js for code blocks -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
   <script>
-    // All your files
     const files = [
       "01_Select.md",
       "02_Select_Distinct.md",
@@ -214,62 +330,112 @@
       "36_CAST.md",
       "37_NULLIF.md",
       "38_Views.md",
-      "39_Import & Export Data with pgAdmin.md"
+      "39_Import & Export Data with pgAdmin.md",
     ];
 
-    const sidebar = document.getElementById('sidebar');
-    const preview = document.getElementById('preview');
+    const sidebar = document.getElementById("sidebar");
+    const preview = document.getElementById("preview");
+    const navButtons = document.getElementById("navButtons");
+    let currentFileIndex = null;
 
-    // Convert file name "23_Chosing_Data_Types.md" -> "23. Chosing Data Types"
+    // Format sidebar text
     function getSidebarText(file) {
-      let name = file.replace(/\.md$/, '');
+      let name = file.replace(/\.md$/, "");
       let match = name.match(/^(\d+)_([\s\S]+)$/);
       if (match) {
         let num = match[1];
         let rest = match[2];
-        rest = rest.replace(/_/g, ' ');
-        rest = rest.replace(/&/g, 'and');
-        // Capitalize each word
-        rest = rest.replace(/\b\w+/g, function(word) {
+        rest = rest.replace(/_/g, " ");
+        rest = rest.replace(/&/g, "and");
+        rest = rest.replace(/\b\w+/g, function (word) {
           return word.charAt(0).toUpperCase() + word.slice(1);
         });
         return `${num}. ${rest}`;
       } else {
-        return name.replace(/_/g, ' ').replace(/\b\w+/g, function(word) {
+        return name.replace(/_/g, " ").replace(/\b\w+/g, function (word) {
           return word.charAt(0).toUpperCase() + word.slice(1);
         });
       }
     }
 
-    function loadFile(fileName, linkElem) {
+    function loadFileByIndex(idx) {
+      const fileName = files[idx];
+      currentFileIndex = idx;
       fetch(fileName)
-        .then(resp => resp.text())
-        .then(text => {
-          // Render markdown and highlight code
+        .then((resp) => resp.text())
+        .then((text) => {
           preview.innerHTML = marked.parse(text);
-          document.querySelectorAll('.sidebar a').forEach(a => a.classList.remove('active'));
-          if (linkElem) linkElem.classList.add('active');
-          // Highlight all code blocks
-          preview.querySelectorAll('pre code').forEach(block => {
-            hljs.highlightElement(block);
-          });
+          document
+            .querySelectorAll(".sidebar a")
+            .forEach((a, i) => a.classList.toggle("active", i === idx));
+          // Highlight code
+          preview
+            .querySelectorAll("pre code")
+            .forEach((block) => hljs.highlightElement(block));
+          // Show nav buttons
+          showNavButtons();
+          // On mobile, close sidebar after selection
+          if (window.innerWidth <= 700) sidebar.classList.remove("open");
         })
         .catch(() => {
           preview.innerHTML = `<b style="color:red;">Failed to load: ${fileName}</b>`;
+          showNavButtons();
         });
     }
 
+    function showNavButtons() {
+      navButtons.style.display = currentFileIndex !== null ? "flex" : "none";
+      if (currentFileIndex === null) return;
+
+      let prevIdx = (currentFileIndex - 1 + files.length) % files.length;
+      let nextIdx = (currentFileIndex + 1) % files.length;
+
+      navButtons.innerHTML = `
+    <button id="prevBtn">
+      <i class="fa fa-chevron-left"></i> Previous
+    </button>
+    <button id="nextBtn">
+      Next <i class="fa fa-chevron-right"></i>
+    </button>
+  `;
+
+      // Only set onclick if the buttons exist
+      const prevBtn = document.getElementById("prevBtn");
+      const nextBtn = document.getElementById("nextBtn");
+      if (prevBtn) prevBtn.onclick = () => loadFileByIndex(prevIdx);
+      if (nextBtn) nextBtn.onclick = () => loadFileByIndex(nextIdx);
+    }
+
     // Populate sidebar
-    files.forEach(file => {
-      const a = document.createElement('a');
+    files.forEach((file, i) => {
+      const a = document.createElement("a");
       a.textContent = getSidebarText(file);
       a.href = "#";
       a.onclick = (e) => {
         e.preventDefault();
-        loadFile(file, a);
+        loadFileByIndex(i);
       };
       sidebar.appendChild(a);
     });
+
+    // Hamburger menu logic
+    const menuToggle = document.getElementById("menuToggle");
+    menuToggle.onclick = function () {
+      sidebar.classList.toggle("open");
+    };
+    // Hide sidebar on click outside (mobile)
+    document.body.addEventListener("click", function (e) {
+      if (window.innerWidth > 700) return;
+      if (!sidebar.contains(e.target) && !menuToggle.contains(e.target)) {
+        sidebar.classList.remove("open");
+      }
+    });
+
+    // On resize, close sidebar if desktop
+    window.addEventListener("resize", function () {
+      if (window.innerWidth > 700) sidebar.classList.remove("open");
+    });
   </script>
 </body>
+
 </html>
