--- a/index.html
+++ b/index.html
@@ -298,51 +298,11 @@
   </footer>
   <!-- Marked.js for markdown -->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script src="files.js"></script>
   <!-- Highlight.js for code blocks -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
   <script>
-    const files = [
-      "01_Select.md",
-      "02_Select_Distinct.md",
-      "03_Count.md",
-      "04_AS_Clause.md",
-      "04_Where.md",
-      "05_Order_By.md",
-      "06_LIMIT.md",
-      "07_Between.md",
-      "08_IN_NOT-IN.md",
-      "09_Group_By_Overview.md",
-      "10_Aggregate_functions.md",
-      "11_Group_By.md",
-      "12_Having.md",
-      "13_Group_By_Having.md",
-      "14_Inner_Join.md",
-      "15_Full_Outer_Join.md",
-      "16_Left_Outer_Join.md",
-      "17_Joins_Unions.md",
-      "18_Right_Join.md",
-      "19_Union.md",
-      "20_Timestamp_and_Extract.md",
-      "21_Mathematical_Functions.md",
-      "22_String_Functions_&_Operations.md",
-      "23_Chosing_Data_Types.md",
-      "24_Primary_Foreign_Keys.md",
-      "25_Constraints.md",
-      "26_Create_Table.md",
-      "27_Insert_Into.md",
-      "28_Update.md",
-      "29_Delete.md",
-      "30_ALTER_TABLE.md",
-      "31_DROP_COLUMN.md",
-      "32_CHECK Constraint.md",
-      "33_Conditional Expressions & Operators.md",
-      "34_CASE.md",
-      "35_COALESCE.md",
-      "36_CAST.md",
-      "37_NULLIF.md",
-      "38_Views.md",
-      "39_Import & Export Data with pgAdmin.md",
-    ];
+    
 
     const sidebar = document.getElementById("sidebar");
     const preview = document.getElementById("preview");
