--- a/index.html
+++ b/index.html
@@ -251,6 +251,109 @@
         margin-top: 0;
       }
     }
+
+    /* Dark theme styles */
+    body.dark {
+      background: #181a20;
+      color: #e0e0e0;
+    }
+
+    body.dark .header {
+      background: #232946;
+      color: #fff;
+      box-shadow: 0 2px 4px #1113;
+    }
+
+    body.dark .container {
+      background: #232946;
+      box-shadow: 0 4px 16px #1113;
+    }
+
+    body.dark .sidebar {
+      background: #232946;
+      border-right: 1px solid #232946;
+    }
+
+    body.dark .sidebar h2,
+    body.dark .sidebar a {
+      color: #8fd6e7;
+    }
+
+    body.dark .sidebar a:hover,
+    body.dark .sidebar a.active {
+      background: #1a1d2b;
+      color: #fff;
+    }
+
+    body.dark .preview {
+      background: #181a20;
+      color: #e0e0e0;
+    }
+
+    body.dark .preview h1,
+    body.dark .preview h2,
+    body.dark .preview h3 {
+      color: #8fd6e7;
+    }
+
+    body.dark pre {
+      background: #232946;
+      color: #e0e0e0;
+      box-shadow: 0 2px 8px #1113;
+    }
+
+    body.dark code {
+      background: #232946;
+      color: #ffb86c;
+    }
+
+    body.dark .nav-buttons button {
+      background: #232946;
+      color: #fff;
+    }
+
+    body.dark .nav-buttons button:active {
+      background: #181a20;
+    }
+
+    body.dark footer {
+      background: #232946;
+      color: #8fd6e7;
+    }
+
+    .theme-toggle-wrapper {
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      padding: 12px 24px 0 0;
+      box-sizing: border-box;
+    }
+
+    .theme-toggle-btn {
+      background: none;
+      border: none;
+      color: #fff;
+      font-size: 1.6rem;
+      cursor: pointer;
+      transition: color 0.2s;
+      margin: 0;
+      position: static;
+    }
+
+    body.dark .theme-toggle-btn {
+      color: #8fd6e7;
+    }
+
+    @media (max-width: 700px) {
+      .theme-toggle-wrapper {
+        padding: 0px 10px 0 0;
+      }
+
+      .theme-toggle-btn {
+        font-size: 1.7rem;
+      }
+    }
   </style>
 </head>
 
@@ -259,6 +362,11 @@
     <button class="menu-toggle" id="menuToggle" aria-label="Show menu">
       <i class="fa fa-bars"></i>
     </button>
+    <div class="theme-toggle-wrapper">
+      <button id="themeToggle" aria-label="Toggle theme" class="theme-toggle-btn">
+        <i class="fa fa-moon"></i>
+      </button>
+    </div>
     <i class="fa fa-database"></i> SQL Notes
     <span style="font-size: 1.2rem">| Quick Reference</span>
   </div>
@@ -406,6 +514,25 @@
     window.addEventListener("resize", function () {
       if (window.innerWidth > 700) sidebar.classList.remove("open");
     });
+
+    // Theme toggle logic
+    const themeToggle = document.getElementById("themeToggle");
+    const themeIcon = themeToggle.querySelector("i");
+
+    // Load theme from localStorage
+    if (localStorage.getItem("theme") === "dark") {
+      document.body.classList.add("dark");
+      themeIcon.classList.remove("fa-moon");
+      themeIcon.classList.add("fa-sun");
+    }
+
+    themeToggle.onclick = function () {
+      document.body.classList.toggle("dark");
+      const isDark = document.body.classList.contains("dark");
+      themeIcon.classList.toggle("fa-moon", !isDark);
+      themeIcon.classList.toggle("fa-sun", isDark);
+      localStorage.setItem("theme", isDark ? "dark" : "light");
+    };
   </script>
 </body>
 
